Fixed Wrong Email Login with Unit Test

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,15 @@
         <label for="email">Email:</label>
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class=flashes>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
     </form>
 </body>
 </html>
