--- a/templates/booking.html
+++ b/templates/booking.html
@@ -10,7 +10,7 @@
     <form action="/purchasePlaces" method="post">
         <input type="hidden" name="club" value="{{club['name']}}">
         <input type="hidden" name="competition" value="{{competition['name']}}">
-        <label for="places">How many places?</label><input type="number" name="places" id=""/>
+        <label for="places">How many places? (12 max) </label><input type="number" name="places" id=""/>
         <button type="submit">Book</button>
     </form>
     {% with messages = get_flashed_messages() %}
